--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for cash-premios on 2024-06-19T01:59:36-03:00
+# fly.toml app configuration file generated for cash-premios-test on 2024-07-24T19:49:20-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'cash-premios'
-primary_region = 'gru'
+app = 'cash-premios-test'
+primary_region = 'gig'
 console_command = '/rails/bin/rails console'
 
 [build]
