feat: configurações da area de teste

--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for cash-premios-test on 2024-07-24T19:49:20-03:00
+# fly.toml app configuration file generated for cash-premios-test on 2024-07-26T14:30:02-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'cash-premios-test'
-primary_region = 'gig'
+primary_region = 'gru'
 console_command = '/rails/bin/rails console'
 
 [build]
@@ -16,7 +16,7 @@ console_command = '/rails/bin/rails console'
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
