--- a/database.yml
+++ b/database.yml
@@ -11,16 +11,16 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: <%= ENV.fetch("DATABASE_NAME") %>
-  username: <%= ENV.fetch("DATABASE_USER") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
-  host: <%= ENV.fetch("DATABASE_HOST") %>
+  url: <%= ENV['DATABASE_URL'] %>
 
 test:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: <%= ENV.fetch("DATABASE_NAME") %>
-  username: <%= ENV.fetch("DATABASE_USER") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
-  host: <%= ENV.fetch("DATABASE_HOST") %>
+  url: <%= ENV['DATABASE_URL'] %>
+
+
+  # database: <%= ENV.fetch("DATABASE_NAME") %>
+  # username: <%= ENV.fetch("DATABASE_USER") %>
+  # password: <%= ENV.fetch("DATABASE_PASSWORD") %>
+  # host: <%= ENV.fetch("DATABASE_HOST") %>
