--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   test:
     name: Test
-    environment: rails_tdd
+    environment: cash_premios_tdd
     runs-on: ubuntu-latest
 
     services:
